banner section responsive

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     </head>
     <body class="font-work-sans mt-0 bg-main-color">
         <!-- this is the banner section -->
-        <div class="hero min-h-screen bg-back-color">
-            <div class="hero-content w-full flex-col justify-around lg:flex-row-reverse">
-                <div>  <img src="images/Summer 1.png" class="max-w-md max-h-full" /></div>
+        <div class="hero min-h-screen bg-back-color ">
+            <div class="hero-content w-full flex-col justify-around flex-none  lg:flex-row-reverse">
+                <div>  <img src="images/Summer 1.png" class="max-w-xs md:max-w-sm lg:max-w-md max-h-full" /></div>
               <div >
-                <h3 class="text-3xl font-bold text-center">---SALE FEVER---</h3>
-                <p class="text-6xl font-bold mt-5">Purchase TK 200 or</p>
-                <p class="text-6xl font-bold mt-3">above & get <span class="text-common-color" >20% off</span></p>
+                <h3 class=" text-xl md:text-2xl lg:text-3xl font-medium md:font-semibold lg:font-bold text-center">---SALE FEVER---</h3>
+                <p class="text-3xl md:text-4xl lg:text-6xl font-bold mt-5 text-center ">Purchase TK 200 or</p>
+                <p class="text-3xl md:text-4xl lg:text-6xl font-bold mt-3 text-center">above & get <span class="text-common-color" >20% off</span></p>
                 <div class=" mt-10 text-center space-x-3">
                     <span class="text-xl font-medium">User Promo code </span>
                     <button class="btn btn-secondary bg-common-color text-xl font-medium">SELL200</button>
@@ -47,7 +47,7 @@
             </div>
           </div>
           <!-- this is card section -->
-          <main class="mx-24 my-24 ">
+          <main class="lg:mx-24 lg:my-24 ">
              <div class="flex">
                 <div>
                     <div>
