--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
                         <div class="selected-item " id="selected-item">
 
                         </div>
-                          <p>Total Price : <span id="total">00</span></p>
-                          <p>Discount : <span id="discount">00</span></p>
-                          <p> Total : <span id="grand_total">00</span></p>
+                          <p>Total Price : <span id="total">00</span> TK</p>
+                          <p>Discount : <span id="discount">00</span> TK</p>
+                          <p> Total : <span id="grand_total">00</span> TK</p>
                        
                           
                             <button class="btn btn-secondary bg-common-color text-xl font-medium" onclick="my_modal_2.showModal()" id="purchase" disabled>Make Purchase</button>
@@ -209,7 +209,7 @@
                                 <img src="images/congo.png" class="px-40 pt-10 h-40" alt="">
                                 <h3 class="text-4xl font-medium text-center">Congratulation</h3>
                                 <p class="px-28 py-4">Your Purchase the Product </p>
-                                <button class="mx-40 btn btn-secondary bg-common-color text-xl font-medium">Go Home</button>
+                                <button onclick="handleClick()" class="mx-40 btn btn-secondary bg-common-color text-xl font-medium">Go Home</button>
                             </form>
                             <form method="dialog" class="modal-backdrop">
                                 <button>close</button>
